Solve flickering of "add to catalogue" button (fixes #3328).

--- a/scss/app.scss
+++ b/scss/app.scss
@@ -641,3 +641,7 @@ con10t-catalog-tree {
 
   width: 100%;
 }
+
+#searchResultCatalogueAdd .tooltip {
+  width: 175px;
+}
